--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.5",
+    "@types/seedrandom": "^3.0.5",
     "assert": "^2.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
@@ -36,5 +37,8 @@
     "prettier": "^2.5.1",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "seedrandom": "^3.0.5"
   }
 }
